# Friedman

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: build-julia-sidecar.jl  build-sidecar.ps1  build-sidecar.sh  generate-test-data.jl  setup-sidecar.sh  test-sidecar.jl
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: Manifest.toml  Project.toml  main.jl
src-tauri/src/: error.rs  lib.rs  sidecar.rs  state.rs
src-tauri/src/commands/: arima.rs  bvar.rs  data.rs  factor.rs  fevd.rs  gmm.rs  hd.rs  irf.rs  lp.rs  mod.rs  nongaussian.rs  test.rs  var.rs
src-tauri/tests/: sidecar_integration.rs
src-tauri/tests/fixtures/: test_macro_large.csv
src/__tests__/: commandIntegration.test.ts  executeCommand.test.ts  journalFlow.test.ts  resultCharts.test.ts  setup.ts
src/__tests__/components/: FileSelector.test.tsx  TopNav.test.tsx
src/__tests__/hooks/: useDataset.test.ts
src/__tests__/stores/: journalStore.test.ts  navigationStore.test.ts  outputStore.test.ts  projectStore.test.ts  resultStore.test.ts
src/api/: commands.ts  events.ts  types.ts
src/components/charts/: HDChart.tsx  (+4 more)
src/hooks/: useDataset.ts  useFriedmanCommand.ts
src/lib/: chartTheme.ts  executeCommand.ts  journalFlow.ts  resultCharts.ts
src/pages/: BacklogPage.tsx  DataPage.tsx  JournalPage.tsx  ResultPage.tsx
src/stores/: journalStore.ts  navigationStore.ts  outputStore.ts  projectStore.ts  resultStore.ts
tests/fixtures/: sample_macro.csv
(+11 files in other folders)
